# AgentCore

./: .current_bead  .gitignore  .tmux.conf.agentcore  ACTIVATION_GUIDE.md  AGENTS.md  AGENT_MAIL.md  ARCHITECTURE.md  CLAUDE.md  GETTING_STARTED.md  PRACTICAL_USAGE.md  README.md  START-TESTING.md  STATUS.md  TEST_RESULTS.md  package-lock.json  package.json  setup.sh  start
.agent-profiles/: types.yaml
.beads/: ntm-config.yaml
.context/: session-state.md
.flywheel/: ORCHESTRATOR_APPROACHES.md  browser-ready.txt  browser-worker-instructions.md  chatgpt.json  grok.json  orchestrator-instructions.md
AgentCore/: README.md
agentcore/: README.md
beads_rust/: AGENTS.md  AGENT_FRIENDLINESS_REPORT.md  build.rs  tarpaulin.toml
beads_viewer/: .goreleaser.yaml  AGENTS.md
cass_memory_system/: .gitignore  AGENTS.md  README.md
config/: supervisord.conf
docs/: supervisord-usage.md
flywheel_connectors/: .gitignore  Cargo.toml  README.md
flywheel_connectors/connectors/vectordb/: Cargo.toml  manifest.toml
flywheel_connectors/connectors/vectordb/src/: config.rs  lib.rs  main.rs
flywheel_connectors/crates/fcp-sdk/: Cargo.toml
flywheel_connectors/crates/fcp-sdk/src/: formatting.rs  lib.rs  prelude.rs  retry.rs  runtime.rs
flywheel_connectors/crates/fcp-sdk/tests/: formatter_tests.rs  retry_integration_tests.rs  retry_policy_tests.rs  sdk_error_tests.rs  sdk_golden_vector_tests.rs  sdk_schema_tests.rs  sdk_state_tests.rs  sdk_trait_tests.rs  streaming_golden_vector_tests.rs
flywheel_connectors/crates/fcp-sdk/tests/vectors/streaming/: ack_sequences.json  cursor_formats.json
flywheel_tools/: README.md  install.sh  package.json
logs/: mail-monitor-topazdeer.err
markdown_web_browser/: .gitignore  CODE_REVIEW_FINDINGS.md  Dockerfile  INITIAL_PROMPT_TO_GENERATE_PLAN_DOCUMENT.md  OPTIMAL_DEDUPLICATION_STRATEGY.md  PLAN_TO_IMPLEMENT_MARKDOWN_WEB_BROWSER_PROJECT.md  README.md  install.sh  playwright.config.mjs
mcp_agent_mail/: compose.yaml  docker-compose.yml
ntm/: AGENT_FRIENDLINESS_REPORT.md  CONTRIBUTING.md  PLAN_TO_ADD_WEB_UI_AND_REST_AND_WEBSOCKET_API_LAYERS_TO_NTM__CLAUDE_WEB.md  PLAN_TO_ADD_WEB_UI_AND_REST_AND_WEBSOCKET_API_LAYERS_TO_NTM__GEMINI.md  PLAN_TO_ADD_WEB_UI_AND_REST_AND_WEBSOCKET_API_LAYERS_TO_NTM__GPT.md  PLAN_TO_ADD_WEB_UI_AND_REST_AND_WEBSOCKET_API_LAYERS_TO_NTM__GPT_PRO.md  PROPOSED_HYPERSYNC_SPEC__OPUS.md  go.mod  go.sum  modes_of_reasoning.md  (+1 more)
slb/: AGENTS.md  (+6 more)
(+1786 files in other folders)
