[package]
name = "fcp-vectordb"
description = "Provider-selectable vector database connector (Pinecone, Qdrant) for the Flywheel Connector Protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "fcp-vectordb"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
fcp-core = { path = "../../crates/fcp-core" }

anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
wiremock.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
fcp-testkit = { path = "../../crates/fcp-testkit" }
chrono.workspace = true
